# regexHaskell

./: CHANGELOG.md  FiniteAutomata.cabal  LICENSE  README.md
app/: GraphFunctions.hs  Main.hs  ParserThing.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
