cabal-version:      3.0
name:               FiniteAutomata
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             soda-caustica
maintainer:         maxbeltran@protonmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable FiniteAutomata
    import:           warnings
    main-is:          Main.hs
    other-modules: GraphFunctions ParserThing
    -- other-extensions:
    build-depends:    
              base ^>=4.17.2.1
            , containers >= 0.7
            , mtl >= 2.3.1


    hs-source-dirs:   app
    default-language: Haskell2010
